Changed SlothDemo's URL rewrite rules in .htaccess so that files within the project can be made available without going through the framework. e.g. images, JS and CSS files need to be directly accessible by the browser, rather than rerouted through the default controller. Moved index.php and .htaccess into a new "Public" directory, and added a CSS file to demonstrate that the new rewrite rules work as intended.

--- a/SlothDemo/Public/.htaccess
+++ b/SlothDemo/Public/.htaccess
@@ -1,5 +1,5 @@
 # Redirect all requests to index.php
 <ifmodule mod_rewrite.c>
 	RewriteEngine on
-	RewriteRule (.*) index.php
+	RewriteRule ^(?!public/).*$ index.php [NC]
 </ifmodule>
