Updated SlothMySql to PhpMySql. Removed dependency on favicon/autoload in favour of Composer's autoloading.

--- a/SlothDemo/environment/web/Dockerfile
+++ b/SlothDemo/environment/web/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:5.6-apache
 
 # Configure PHP
-RUN docker-php-ext-install mysqli
+RUN docker-php-ext-install pdo_mysql
 
 # Configure Apache modules
 RUN ln -s /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled/rewrite.load
