Renamed composer package to djbingham/php-celestial.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "favicon/sloth",
+	"name": "djbingham/php-celestial",
 	"description": "PHP Framework",
 	"minimum-stability": "stable",
 	"license": "proprietary",
