Change exposed ports for web and database in demo project. Also moved files to /app inside the container and set correct file permissions.

--- a/SlothDemo/environment/docker-compose.yml
+++ b/SlothDemo/environment/docker-compose.yml
@@ -10,12 +10,12 @@ web:
   links:
     - "database"
   ports:
-    - "180:80"
+    - "80:80"
   volumes:
-    - "../../:/usr/share/app/"
+    - "../../:/app/"
 
 database:
   build: .
   dockerfile: ./database/Dockerfile
   ports:
-    - "13306:3306"
+    - "3306:3306"
