--- a/SlothDemo/environment/web/vhosts/celestial.conf
+++ b/SlothDemo/environment/web/vhosts/celestial.conf
@@ -4,10 +4,12 @@
 
 	ServerAdmin celestial@davidjbingham.co.uk
 
-	DocumentRoot /usr/share/app/SlothDemo/Public
+	DocumentRoot /app/SlothDemo/Public
 
-	<Directory /usr/share/app>
+	<Directory /app>
+		Options Indexes FollowSymLinks
 		AllowOverride All
+		Require all granted
 	</Directory>
 
 </VirtualHost>
