Created Log module, using Molog-Cascade to configure Monolog loggers.

--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
 	],
 	"require": {
 		"djbingham/php-celestial-mysql": "dev-master",
+		"monolog/monolog": "*",
 		"mustache/mustache": "*",
 		"phpunit/phpunit": "*",
-		"zordius/lightncandy": "*",
-		"monolog/monolog": "*"
+		"theorchard/monolog-cascade": "*",
+		"zordius/lightncandy": "*"
 	},
 	"autoload": {
 		"psr-4": {
