Refactored Log module to allow context to be supplied to each Logger instance as well as per message. Intended usage is to create a new Logger for each context (e.g. every class/file could have its own Logger). The log messaging templates can then reference this contextual data to indicate which class/file each message was logged from.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 		}
 	],
 	"require": {
+		"bramus/monolog-colored-line-formatter": "^2.0",
 		"djbingham/php-celestial-mysql": "dev-master",
 		"monolog/monolog": "*",
 		"mustache/mustache": "*",
