Added example project: To Do List.

--- a/Example/ToDoList/App/composer.json
+++ b/Example/ToDoList/App/composer.json
@@ -12,5 +12,10 @@
 	"require": {
 		"djbingham/php-celestial": "dev-master",
 		"djbingham/php-celestial-mysql": "dev-master"
+	},
+	"autoload": {
+		"psr-4": {
+			"ToDoList\\": "./"
+		}
 	}
 }
